--- a/appspec.yml
+++ b/appspec.yml
@@ -1,15 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: /
+  - source: /index.html
     destination: /home/ubuntu/django/edge/
-hooks:
-  BeforeInstall:
-    - location: scripts/start_server
-      timeout: 300
-      runas: ubuntu
-  ApplicationStop:
-    - location: scripts/stop_server
-      timeout: 300
-      runas: ubuntu
+
 
